fixed overflow issue

--- a/src/App.css
+++ b/src/App.css
@@ -7,7 +7,7 @@
 
 body{
   background-color: #000 !important;
-
+  overflow-x: hidden;
 }
 
 /* NAVBAR STYLING */
